# projects

Encryption/: Encryption.sln
Encryption/Debug/: Encryption.ilk
Encryption/Encryption/: Encryption.vcxproj  Encryption.vcxproj.filters  flbw.h  main.cpp
Indeed_Job_Scraper/: Indeed_Job_Scraper.py  monster.py  res.html
Karpathy-Neural-Networks-Zero-to-Hero/: README.md
ManualAssistant/: ManualAssistant_TinyLlama.ipynb  README.md  manualassistant_tinyllama.py
TeacherAssistant/: Teacher.ipynb
ann-matrix/: ann-matrix.sln  ann-matrix.vcxproj  ann-matrix.vcxproj.filters
c-ann-matrix/: .gitignore  Makefile  README.md
c-neural-network/: README.md  c_neural_network.sln
fastapi-helloworld/: docker-compose.yml  pyproject.toml
flbw-master/: flbw.cpp  flbw.h
flowt/: .gitignore  Pipfile  README.md  requirements.txt  setup.py
flowt/data/: temp.csv
makemore/: README.md  makemore.py
makemore-series/: README.md
ml_internship_project/: Dockerfile  readme.md  requirements.txt  result.py  streamlit_app.py  test.py
nanoGPT-C-Code/: .gitignore  README.md  pyvenv.cfg  train_embc.py
practical-DL-for-coders/: 07-how-random-forests-really-work.ipynb
python-audiobook/: Adolf Hitler - Mein Kampf (The Stalag Edition)-Central Press of the NSDAP (1925).docx  Adolf Hitler - Mein Kampf (The Stalag Edition)-Central Press of the NSDAP (1925).txt
python-comment-remover/: LICENSE  README.md
repository-links-collector/: command.txt  main.py
todo_app/: .env-example  pyproject.toml
todo_app/tests/: test_main.py
voice_chat/: .gitignore  pyproject.toml  requirements.txt
(+169 files in other folders)
